style.css
body{
	margin:0;
	font-family: 'Roboto', sans-serif;
	
}
.container{
	display: flex;
}
/*partie gauche*/
.photo{
	margin:40px 0 20px 0;
	text-align: center;
}
.left{
	width: 30%;
	background-color: Bisque;
	position: relative;
}

.avatar{
	width: 150px;
	height: 150px;
	border-radius: 50%;
	border: 2px dimgrey solid;
}
.title-sm{
	display: none;
}
.left p{
	margin: 0 20px 0 20px;
	text-align: justify;
}
.title_left{
	background-color: black;
	padding: 10px;
	color: burlywood;
	text-align: center;

}
.icone_left{
	color: black;
	text-align: center;
}
.loisirs{
	position: absolute;	
	bottom: 20px;
	width: 100%;

}
/* partie droite */
.surline{
	border-bottom: 2px solid burlywood; 
	margin-top: -10px; 
}
.right{
	width: 70%;
	padding: 50px 5% 20px 5%;
	text-align: left;
}
.row{
	display: flex;
}
.col3{
	width: 30%;
}
.col7{
	width: 70%;
}

i{
	color: burlywood;
}
header
{
	color: black;
	margin: 0 0 50px 0;

}
.color_title{
	color: burlyWood; 
	font-size: 40px; 
}
.surline-header{
	border-bottom: 2px solid burlywood;
	margin-top: -10px; 
	width: 50px;
}

/*footer*/
.col2{
	width: 50%
}
.col8{
    width: 50%
}
/*format tablette*/
@media screen and (max-width: 1024px){
.left{
	width: 50%;
	
}
.right{
	width: 50%;
	
}
.row{
	display: inherit;
}
.col3 .col7{
	width: 100%;
}
}
/*format smarphone*/
@media screen and (max-width: 720px){

	.container{
		flex-direction: column;
	}
	.left, .right{
		width: 100%;
		padding: 50px 0% 20px 0%;
		text-align: center justify;
	}
	.col3 .col7
	{
		width: 100%;
	}
	.loisirs{
		position: inherit;
	}
	.title-sm{
		display: block;
	}
	.title-lg{
		display: none;
	}
	.photo{
		text-align: center;
	}
	.right section, .right header, .right footer{
		margin: 0 5% 0 5%; 
	}
	.col{
		width: 100%;
	}


}

